package cc39005364.q1;

public interface Serializer {
    String name(String name);
    int size(String name);
    String write(String chaine);
}
