@startuml
'https://plantuml.com/class-diagram



interface Serializer{
    +name(): string
    +size(): void
    +write():void
}

class FileSerializer{
    +this(): FileSerializer
    ..
    +name(): string
    +size(): void
    +write():void
     ..
     toString(): string
}
 Serializer <|.. FileSerializer

class ScreenSerializer{
    +this(): ScreenSerializer
    ..
    +name(): string
    +size(): void
    +write():void
    ..
    toString(): string
}
 Serializer <|.. ScreenSerializer

class FactorySerializer{
    + {static} INSTANCE: FactorySerializer= new FactorySerializer() <<final>>
    - this(): FactorySerializer
    + {static} getInstance(): FactorySerializer
}
ScreenSerializer <|.. FactorySerializer : <<creates>>
FileSerializer <|.. FactorySerializer : <<creates>>
TypeSerialize <|.. FactorySerializer : <<creates>>
enum TypeSerialize{
    SCEENSERIALISER, FILASERIALIZER
}





@enduml

